Honor Systems generated updates
https://github.com/x-stream/xstream/issues/296
Automatic updates
https://jenkins.updater.j2eeguys.com/
xstream/src/java/com/thoughtworks/xstream/mapper/SecurityMapper.java
    Replace the type specification in this constructor call with the diamond operator ("<>"). [squid:S2293]
xstream-benchmark/src/java/com/thoughtworks/xstream/tools/benchmark/model/FiveBean.java
    uses deprecated method java/lang/Boolean::<init>(Z)V [java.9]
xstream/src/java/com/thoughtworks/xstream/io/StatefulWriter.java
    Replace the type specification in this constructor call with the diamond operator ("<>"). [squid:S2293]
xstream-benchmark/src/java/com/thoughtworks/xstream/tools/benchmark/targets/ExtendedTarget.java
    uses deprecated method java/lang/Boolean::<init>(Z)V [java.9]
    uses deprecated method java/lang/Integer::<init>(I)V [java.9]
xstream/src/java/com/thoughtworks/xstream/io/json/JettisonStaxWriter.java
    Replace the type specification in this constructor call with the diamond operator ("<>"). [squid:S2293]
xstream-jmh/src/java/com/thoughtworks/xstream/benchmark/jmh/StringConverterBenchmark.java
    Replace the type specification in this constructor call with the diamond operator ("<>"). [squid:S2293]
    Remove this unused import 'com.thoughtworks.xstream.io.xml.Xpp3Driver'. [java:S1128]
xstream-benchmark/src/java/com/thoughtworks/xstream/tools/benchmark/model/Five.java
    uses deprecated method java/lang/Boolean::<init>(Z)V [java.9]
xstream/src/java/com/thoughtworks/xstream/converters/reflection/XStream12FieldKeySorter.java
    Replace the type specification in this constructor call with the diamond operator ("<>"). [squid:S2293]
xstream/src/java/com/thoughtworks/xstream/core/util/PresortedMap.java
    Replace the type specification in this constructor call with the diamond operator ("<>"). [squid:S2293]
xstream/src/java/com/thoughtworks/xstream/core/util/WeakCache.java
    Replace the type specification in this constructor call with the